# AppGui

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json
Engine/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json
Engine/.cache/clangd/index/: Application.cpp.C022C76A14922E58.idx  Application.h.BB274F5732FE0A8C.idx  EntryPoint.h.4F905E5FC7734DD8.idx  Event.h.D8E0A462338422EE.idx  KeyEvent.h.21F74A848413AAD6.idx  Layer.h.E96FDC97D1DDD711.idx  LayerStack.h.DA41E07FF60EDFE3.idx  LinuxWindow.cpp.73493B94C2A976FF.idx  LinuxWindow.h.110656A0C3D57819.idx  MouseEvent.h.0ECFC78FC287BEE4.idx  WindowTemplate.h.8AF0E678E71331BD.idx  cmake_pch.hxx.8D2EAFCD85BD82F3.idx  cmake_pch.hxx.cxx.82B8D9DCF87933FD.idx  context.c.48CA97B82CE89FB8.idx  egl_context.c.A0C3F8E02FF72DB3.idx  fractional-scale-v1-client-protocol-code.h.04908A6BC602D4FA.idx  fractional-scale-v1-client-protocol.h.4B30D96E057F1538.idx  glad.c.D2A89163915843FC.idx  glad.h.C378E63E4D50A441.idx  glfw3.h.12544AF548613B84.idx  glfw3native.h.3D7916332B93174E.idx  glx_context.c.F3608B48C01F3EBD.idx  idle-inhibit-unstable-v1-client-protocol-code.h.2581CF06BEC94CDA.idx  idle-inhibit-unstable-v1-client-protocol.h.0F3DAA8B6D4111A8.idx  imconfig.h.81FBB6E9BDAACD84.idx  imgui.cpp.A04B8A7A1E3341D3.idx  imgui.h.5814710DD9C6694C.idx  (+64 more)
Engine/Platform/Linux/: LinuxWindow.cpp  LinuxWindow.h
Engine/src/: Application.cpp  Application.h  EntryPoint.h  Event.h  KeyEvent.h  Layer.h  LayerStack.cpp  LayerStack.h  MouseEvent.h  WindowEvent.h  WindowTemplate.h  pch.h
(+4 files in other folders)
